--- a/ProyectosJAVA/WebServicesOOIA/nbproject/private/private.properties
+++ b/ProyectosJAVA/WebServicesOOIA/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\12.2\\config\\GlassFishEE6\\Properties\\gfv3-1324664711.properties
+deploy.ant.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\12.3\\config\\GlassFishEE6\\Properties\\gfv31232925839.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=D:/glassfish5/glassfish/domains/ServidorOOIA
-j2ee.server.home=D:/glassfish5/glassfish
-j2ee.server.instance=[D:\\glassfish5\\glassfish;D:\\glassfish5\\glassfish\\domains\\ServidorOOIA]deployer:gfv5ee8:localhost:4848
-j2ee.server.middleware=D:/glassfish5
-user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
+j2ee.server.domain=C:/7mo ciclo/LP2/glassfish5/glassfish/domains/domain1
+j2ee.server.home=C:/7mo ciclo/LP2/glassfish5/glassfish
+j2ee.server.instance=[C:\\7mo ciclo\\LP2\\glassfish5\\glassfish;C:\\7mo ciclo\\LP2\\glassfish5\\glassfish\\domains\\domain1]deployer:gfv5ee8:localhost:4848
+j2ee.server.middleware=C:/7mo ciclo/LP2/glassfish5
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
