Procedure cita y java

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ hs_err_pid*
 /ProyectosJAVA/OOIAConfigMySql/build/
 /ProyectosJAVA/ooiaGestEventosModel/build/
 /ProyectosJAVA/ooiaGestAcademicaController/build/
+ProyectosJAVA/ooiaGestHumanaController/build/built-jar.properties
