--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/ProyectoOOIA.csproj
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/ProyectoOOIA.csproj
@@ -115,11 +115,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Connected Services\PsicologosCSVcargaWS\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -187,6 +182,12 @@
     </Compile>
     <Compile Include="Ventanas\Coordinador\Eventos\frmMostrarPonentes.Designer.cs">
       <DependentUpon>frmMostrarPonentes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ventanas\Coordinador\Eventos\frmRegistroAsistencia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ventanas\Coordinador\Eventos\frmRegistroAsistencia.Designer.cs">
+      <DependentUpon>frmRegistroAsistencia.cs</DependentUpon>
     </Compile>
     <Compile Include="Ventanas\Coordinador\Gestionar Datos\frmGestionarDatos.cs">
       <SubType>Form</SubType>
@@ -528,6 +529,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\Coordinador\Eventos\frmMostrarPonentes.resx">
       <DependentUpon>frmMostrarPonentes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ventanas\Coordinador\Eventos\frmRegistroAsistencia.resx">
+      <DependentUpon>frmRegistroAsistencia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventanas\Coordinador\Gestionar Datos\frmGestionarDatos.resx">
       <DependentUpon>frmGestionarDatos.cs</DependentUpon>
@@ -1013,13 +1017,6 @@
     <None Include="Connected Services\GestionHumanaWS\ProyectoOOIA.GestionHumanaWS.tipoUsuarioResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\PsicologosCSVcargaWS\ProyectoOOIA.PsicologosCSVcargaWS.CargarCSVpsicologosResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Connected Services\PsicologosCSVcargaWS\PsicologosCSVcargaWS.wsdl" />
-    <None Include="Connected Services\PsicologosCSVcargaWS\PsicologosCSVcargaWS.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\MaterialSkin.Controls.MaterialCheckBox.datasource" />
     <None Include="Properties\Settings.settings">
@@ -1068,12 +1065,6 @@
     <None Include="Connected Services\CargarCSVcursosLlevadosWS\configuration91.svcinfo" />
     <None Include="Connected Services\CargarCSVcursosLlevadosWS\configuration.svcinfo" />
     <None Include="Connected Services\CargarCSVcursosLlevadosWS\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
-    <None Include="Connected Services\PsicologosCSVcargaWS\configuration91.svcinfo" />
-    <None Include="Connected Services\PsicologosCSVcargaWS\configuration.svcinfo" />
-    <None Include="Connected Services\PsicologosCSVcargaWS\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
@@ -1141,7 +1132,6 @@
     <WCFMetadataStorage Include="Connected Services\GestionEventoWS\" />
     <WCFMetadataStorage Include="Connected Services\GestionHumanaWS\" />
     <WCFMetadataStorage Include="Connected Services\CargarCSVprofesoresWS\" />
-    <WCFMetadataStorage Include="Connected Services\PsicologosCSVcargaWS\" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
